2023-07-06T02:01:06Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5470754351 # 579
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-06
* notice: last 14d: unq all: 6 31
* notice: prev accum: outdated-unq outdated-all / unq all: 169 382 / 184 410
* notice: next accum: outdated-unq outdated-all / unq all: 169 382 / 186 414
* notice: prev exec diff / last date diff / accum: unq all: +2 +4 -0 -1 / +2 +4 -0 -0 / 2 4
* notice: removed / changed dates: [] / [2023-06-22 2023-07-05]

2023-07-05T16:28:46Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5466701643 # 578
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-05
* notice: last 14d: unq all: 6 28
* notice: prev accum: outdated-unq outdated-all / unq all: 168 380 / 184 410
* notice: next accum: outdated-unq outdated-all / unq all: 169 382 / 184 410
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-06-21] / []

2023-07-05T01:57:45Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5459735528 # 576
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-05
* notice: last 14d: unq all: 6 30
* notice: prev accum: outdated-unq outdated-all / unq all: 167 378 / 184 410
* notice: next accum: outdated-unq outdated-all / unq all: 168 380 / 184 410
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-06-20] / []

2022-12-11T08:20:10Z: