@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-07-06T02:01:06Z",
-  "count_outdated" : 382,
-  "uniques_outdated" : 169,
+  "timestamp" : "2023-07-06T16:28:47Z",
+  "count_outdated" : 386,
+  "uniques_outdated" : 171,
   "count" : 414,
   "uniques" : 186,
   "clones" : [
-    {
-      "timestamp": "2023-06-22T00:00:00Z",
-      "count": 3,
-      "count_minmax": [ 1, 4 ],
-      "count_decinc": [ 1, 4 ],
-      "uniques": 2,
-      "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 0, 2 ]
-    },
     {
       "timestamp": "2023-06-23T00:00:00Z",
       "count": 2,
