@@ -1,12 +1,7 @@
 {
-  "count": 31,
-  "uniques": 6,
+  "count": 28,
+  "uniques": 5,
   "clones": [
-    {
-      "timestamp": "2023-06-22T00:00:00Z",
-      "count": 3,
-      "uniques": 2
-    },
     {
       "timestamp": "2023-06-23T00:00:00Z",
       "count": 2,
