@@ -1,3 +1,12 @@
+2023-07-06T16:28:47Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5477874151 # 581
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-06
+* notice: last 14d: unq all: 5 28
+* notice: prev accum: outdated-unq outdated-all / unq all: 169 382 / 186 414
+* notice: next accum: outdated-unq outdated-all / unq all: 171 386 / 186 414
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2023-06-22] / []
+
 2023-07-06T02:01:06Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5470754351 # 579
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-06
